Introduction of the needed ENV vars

--- a/src/docker/Dockerfile
+++ b/src/docker/Dockerfile
@@ -11,12 +11,15 @@ FROM vindevoy/debian10-nginx-lua-script:latest
 
 LABEL maintainer="Yves Vindevogel (vindevoy) - yves.vindevogel@asynchrone.com"
 
-ARG GIT_URL=https://oauth2:${GITLAB_ACCESS_TOKEN}@gitlab.com/asynchrone/infrastructure/user-infra.git
-ARG GIT_BRANCH=develop
+ENV GIT_URL=https://URL.git
+ENV GIT_BRANCH=master
+ENV HOSTS_FILE=/var/opt/ansible/site.yml
 
-COPY resources/lua.sh /tmp/lua.sh
+# Copy is here for layer optimization
+COPY resources/startup.sh /tmp/startup.sh
 COPY resources/lua-server /tmp/lua-server 
 
+# Install extra software
 RUN apt-get update -y
 RUN apt-get upgrade -y
 
@@ -26,35 +29,30 @@ RUN apt-get install ansible --no-install-recommends -y
 # JQ is a json parser, command line. Used for filtering the data for ansible-inventory
 RUN apt-get install jq --no-install-recommends -y
 
-# Git is needed to clone the repo that will be investigated
-RUN apt-get install git --no-install-recommends -y
+# Git is needed to clone the repo that will be investigated, sudo to run as www-data
+RUN apt-get install git sudo --no-install-recommends -y
 
 # Moreutils is needed for the sponge command we use in the script
 RUN apt-get install moreutils --no-install-recommends -y
 
-# Clone the repo
-RUN git clone $GIT_URL /var/opt/ansible 
-RUN cd /var/opt/ansible && git checkout $GIT_BRANCH
+RUN apt-get autoremove
+RUN apt-get clean all
 
-# To review: Nginx makes uses these directories when the script is called
-# It must have write access
-RUN mkdir -p /var/www/.ansible/tmp 
-RUN chmod 777 -R /var/www/.ansible 
-RUN chmod 777 -R /var/www/lua
-
+# Remove original scripts (from vindevoy/debian10-nginx-lua-script:latest) and copy new ones
 RUN rm -f /etc/nginx/sites-available/lua-server
 RUN rm -f /etc/nginx/sites-enabled/lua-server
 RUN mv /tmp/lua-server /etc/nginx/sites-available/
 RUN ln -sf /etc/nginx/sites-available/lua-server /etc/nginx/sites-enabled/lua-server 
 
+# Run nginx as root because of git login (startup.sh must be run by root because it starts nginx)
+# There should be a better way, maybe by executing git pull with sudo
+RUN sed -i "s/user www-data;/user root;/g" /etc/nginx/nginx.conf
+
+# This script is replaced by startup.sh
 RUN rm -f /var/lua/lua.sh 
-RUN mv /tmp/lua.sh /opt/lua/
-RUN chmod +x /opt/lua/lua.sh 
-RUN /opt/lua/lua.sh 
 
-RUN apt-get autoremove
-RUN apt-get clean all
+# The startup script will create the lua.sh file taking into account the ENV variables
+RUN mv /tmp/startup.sh /opt/lua/startup.sh 
+RUN chmod +x /opt/lua/startup.sh 
 
-
-#CMD ["/usr/sbin/nginx", "-g", "daemon off;"]
-CMD ["/bin/bash"]
+CMD ["/bin/bash", "-c", "/opt/lua/startup.sh"]
