Extended versioning of the image build

--- a/src/docker/Dockerfile
+++ b/src/docker/Dockerfile
@@ -8,7 +8,7 @@
 ###
 
 
-FROM vindevoy/debian-openresty:latest
+FROM vindevoy/debian-openresty:1.19.9.1-1-0
 
 LABEL maintainer = "Yves Vindevogel (vindevoy) - yves.vindevogel@asynchrone.com"
 
